--- a/style.css
+++ b/style.css
@@ -13,11 +13,30 @@ body {
 
 #main {
     width: 100%;
-    /* background-color: black; */
+    background-color: black;
 }
 
+#mini-circle{
+    width: 12px;
+    height: 12px;
+    position: absolute;
+    border-radius: 50%;
+    z-index: 99999;
+    background-color: #fff;
+    transition:  all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+}
+
+.bounding{
+    width: fit-content;
+    overflow: hidden;
+}
+
+.bounding .bound-elem{
+    transform: translateY(100%);
+}
 
 #hero-section {
+    position: relative;
     width: 100%;
     height: 100vh;
     color: #fff;
@@ -58,16 +77,25 @@ body {
 }
 
 .blocktxt {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    /* background-color: red; */
     width: fit-content;
 }
 
 .blocktxt h5 {
-    text-align: right;
+    /* background-color: aqua; */
+    /* text-transform: ; */
     text-transform: uppercase;
     font-size: 15px;
+    text-align: right !important;
 }
 
 #small-headings {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
     margin-top: 100px;
     padding-right: 50px;
 }
@@ -151,12 +179,13 @@ body {
 #about{
     color: #fff;
     display: flex;
+    /* flex-wrap: wrap; */
     align-items: center;
     /* justify-content: space-between; */
     gap: 50px;
     width: 100%;
     background-color: black;
-    padding: 10vw 10vw;
+    padding: 10vw 10vh;
     padding-left: 40vw;
 }
 
