--- a/style.css
+++ b/style.css
@@ -170,8 +170,8 @@ body {
 
 .element img{
     height: 140%;
-    /* opacity: 0; */
-    display: none;
+    opacity: 0;
+    /* display: none; */
     z-index: 999;
     position: absolute;
 }
