--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ body {
     gap: 50px;
     width: 100%;
     background-color: black;
-    padding: 10vw 10vh;
+    padding: 10vw 10vw;
     padding-left: 40vw;
 }
 
@@ -194,6 +194,7 @@ body {
     height: 2vh;
     border-radius: 50%;
 } */
+
 #about img{
     width: 200px;
 }
@@ -201,7 +202,6 @@ body {
 #text-about{
     width: 25rem;
     /* background-color: red; */
-
 }
 
 #text-about h5{
@@ -212,7 +212,7 @@ body {
 }
 
 #text-about p{
-    line-height: 1.7;
+    line-height: 1.5;
     margin-bottom: 30px;
 }
 
@@ -270,3 +270,8 @@ body {
     display: flex;
     gap: 20px;
 }
+
+/* window.addEventListener('mousemove', function (details) {
+    document.querySelector('#mini-circle').style.transform = `translate(${details.clientX}px, ${details.clientY}px) scale(${xscale}, ${yscale})`;
+}) */
+
